Hotfix/ resume printing section-alignment fix

--- a/src/app/components/Resume/Resume.scss
+++ b/src/app/components/Resume/Resume.scss
@@ -162,7 +162,7 @@ $module: "resume";
 
                         @media print {
                             font-size: 1.6rem;
-                            margin: 0.25rem 0.5rem;
+                            margin: 0.5rem;
                         }
                     }
                 }
